# SkillBox_CI_Linters

./: .flake8  Dockerfile  docker-compose.yml  main.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
api/v1/: parking.py
core/: config.py
db/: session.py
db/migrations/: env.py
db/migrations/versions/: 2026-03-24_initial_migrate.py
db/models/: client_parking.py  parking.py
db/repositories/: client.py  client_parking.py  parking.py
schemas/: __init__.py  client.py  client_parking.py  parking.py
src/: Dockerfile  main.py  pytest.ini
src/api/: router.py
src/api/v1/: client.py  client_parking.py
src/core/: config.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2026-03-24_initial_migrate.py
src/db/models/: __init__.py  base.py  client.py  client_parking.py  mixins.py
src/db/repositories/: __init__.py  base.py  client.py  client_parking.py  parking.py
src/schemas/: __init__.py  base.py  client_parking.py  parking.py
src/services/: __init__.py  client.py  client_parking.py  parking.py
src/tests/: conftest.py  factories.py  test_api.py
tests/: factories.py  test_api.py
