[project]
name = "skillbox-ci-linters"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya",email = "mnailJk@yandex.ru"}
]
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "greenlet (>=3.3.2,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "faker (>=40.11.1,<41.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
